[project]
name = "flyrocks-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.0",
    "sqlmodel>=0.0.37",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.41.0",
]
