[project]
name = "flyrocks-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "reportlab>=4.4.10",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sqlmodel>=0.0.37",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.41.0",
]
